Fixed editor scrollbars

--- a/mkdocs/docs/live/custom.css
+++ b/mkdocs/docs/live/custom.css
@@ -4,5 +4,5 @@
     right: 0;
     bottom: 0;
     left: 0;
-    height: 2000px;
+    height: 100%;
 }
